Fix main menu spacing

--- a/web/themes/custom/scholars_trust_theme/css/style.css
+++ b/web/themes/custom/scholars_trust_theme/css/style.css
@@ -33,11 +33,12 @@ tr.even {
   border-top: 1px solid silver !important;
 }
 
-#main-menu li span {
+#navigation #main-menu li a,
+#navigation #main-menu li span {
   color: #777;
   display: block;
   margin: 0;
-  padding: 19px 10px 19px 10px;
+  padding: 10px;
   text-decoration: none;
   position: relative;
 }
